[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://graphics/tileset/water.tres" type="TileSet" id=2]
[ext_resource path="res://graphics/tileset/ground.tres" type="TileSet" id=3]
[ext_resource path="res://graphics/tileset/details.tres" type="TileSet" id=4]
[ext_resource path="res://graphics/startscreen/mainmanubackground.png" type="Texture" id=5]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://graphics/startscreen/riverraidtitle.png" type="Texture" id=7]
[ext_resource path="res://graphics/player/plane001.png" type="Texture" id=8]
[ext_resource path="res://graphics/enemy/ShipLimonResizes.png" type="Texture" id=9]
[ext_resource path="res://graphics/enemy/tankresized.png" type="Texture" id=10]
[ext_resource path="res://graphics/enemy/Heli01.png" type="Texture" id=11]
[ext_resource path="res://graphics/enemy/jetresized.png" type="Texture" id=12]
[ext_resource path="res://graphics/startscreen/buttonBG.png" type="Texture" id=13]
[ext_resource path="res://scripts/OurButton.gd" type="Script" id=14]
[ext_resource path="res://sounds/civil-war-field-loop.wav" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 6 )

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TileMapBG" type="Node2D" parent="."]
editor/display_folded = true
rotation = 0.261799

[node name="Water" type="TileMap" parent="TileMapBG"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( -720860, 4, 0, -720859, 4, 0, -720858, 4, 0, -655327, 4, 0, -655326, 4, 0, -655325, 4, 0, -655324, 4, 0, -655323, 4, 0, -655322, 4, 0, -589795, 4, 0, -589794, 4, 0, -589793, 4, 0, -589792, 4, 0, -589791, 4, 0, -589790, 4, 0, -589789, 4, 0, -589788, 4, 0, -589787, 4, 0, -589786, 15, 0, -589785, 8, 0, -524261, 4, 0, -524260, 4, 0, -524259, 4, 0, -524258, 4, 0, -524257, 4, 0, -524256, 4, 0, -524255, 4, 0, -524254, 4, 0, -524253, 4, 0, -524252, 4, 0, -524251, 15, 0, -524250, 8, 0, -524249, 12, 0, -458725, 4, 0, -458724, 4, 0, -458723, 4, 0, -458722, 4, 0, -458721, 4, 0, -458720, 4, 0, -458719, 4, 0, -458718, 4, 0, -458717, 4, 0, -458716, 15, 0, -458715, 8, 0, -458714, 12, 0, -458713, 12, 0, -393189, 4, 0, -393188, 4, 0, -393187, 4, 0, -393186, 4, 0, -393185, 4, 0, -393184, 4, 0, -393183, 4, 0, -393182, 4, 0, -393181, 15, 0, -393180, 8, 0, -393179, 12, 0, -393178, 12, 0, -393177, 12, 0, -393176, 4, 0, -327665, 4, 0, -327664, 4, 0, -327653, 4, 0, -327652, 4, 0, -327651, 4, 0, -327650, 4, 0, -327649, 4, 0, -327648, 4, 0, -327647, 4, 0, -327646, 15, 0, -327645, 8, 0, -327644, 12, 0, -327643, 12, 0, -327642, 12, 0, -262133, 4, 0, -262132, 4, 0, -262131, 4, 0, -262130, 4, 0, -262129, 4, 0, -262128, 4, 0, -262117, 4, 0, -262116, 4, 0, -262115, 4, 0, -262114, 4, 0, -262113, 4, 0, -262112, 4, 0, -262111, 4, 0, -262110, 5, 0, -262109, 12, 0, -262108, 12, 0, -262107, 12, 0, -196603, 4, 0, -196602, 4, 0, -196601, 4, 0, -196600, 4, 0, -196599, 4, 0, -196598, 4, 0, -196597, 4, 0, -196596, 4, 0, -196595, 4, 0, -196594, 4, 0, -196593, 4, 0, -196592, 4, 0, -196581, 4, 0, -196580, 4, 0, -196579, 4, 0, -196578, 4, 0, -196577, 4, 0, -196576, 4, 0, -196575, 4, 0, -196574, 5, 0, -196573, 12, 0, -196572, 12, 0, -131069, 12, 0, -131068, 16, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131064, 4, 0, -131063, 4, 0, -131062, 4, 0, -131061, 4, 0, -131060, 4, 0, -131059, 4, 0, -131058, 4, 0, -131057, 4, 0, -131056, 4, 0, -131045, 4, 0, -131044, 4, 0, -131043, 4, 0, -131042, 4, 0, -131041, 4, 0, -131040, 4, 0, -131039, 4, 0, -131038, 5, 0, -131037, 12, 0, -131036, 12, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 12, 0, -65532, 3, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, 4, 0, -65522, 4, 0, -65521, 4, 0, -65520, 15, 0, -65509, 4, 0, -65508, 4, 0, -65507, 4, 0, -65506, 4, 0, -65505, 4, 0, -65504, 4, 0, -65503, 4, 0, -65502, 5, 0, -65501, 12, 0, -65500, 12, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 12, 0, 4, 6, 0, 5, 16, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 15, 0, 16, 8, 0, 27, 4, 0, 28, 4, 0, 29, 4, 0, 30, 4, 0, 31, 4, 0, 32, 4, 0, 33, 4, 0, 34, 5, 0, 35, 12, 0, 36, 12, 0, 37, 12, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 12, 0, 65541, 6, 0, 65542, 16, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 15, 0, 65551, 8, 0, 65552, 11, 0, 65563, 4, 0, 65564, 4, 0, 65565, 4, 0, 65566, 4, 0, 65567, 4, 0, 65568, 4, 0, 65569, 4, 0, 65570, 5, 0, 65571, 12, 0, 65572, 12, 0, 65573, 12, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 12, 0, 131077, 12, 0, 131078, 3, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 15, 0, 131086, 8, 0, 131087, 12, 0, 131088, 11, 0, 131099, 4, 0, 131100, 4, 0, 131101, 4, 0, 131102, 4, 0, 131103, 4, 0, 131104, 4, 0, 131105, 4, 0, 131106, 5, 0, 131107, 12, 0, 131108, 12, 0, 131109, 4, 0, 131110, 12, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 12, 0, 196614, 3, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 15, 0, 196621, 8, 0, 196622, 11, 0, 196623, 12, 0, 196624, 4, 0, 196635, 4, 0, 196636, 4, 0, 196637, 4, 0, 196638, 4, 0, 196639, 4, 0, 196640, 4, 0, 196641, 4, 0, 196642, 5, 0, 196643, 12, 0, 196644, 12, 0, 196645, 4, 0, 196646, 12, 0, 196647, 12, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 6, 0, 262151, 16, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 15, 0, 262156, 8, 0, 262157, 11, 0, 262158, 12, 0, 262159, 12, 0, 262171, 4, 0, 262172, 4, 0, 262173, 4, 0, 262174, 4, 0, 262175, 4, 0, 262176, 4, 0, 262177, 4, 0, 262178, 17, 0, 262179, 2, 0, 262180, 12, 0, 262181, 12, 0, 262182, 4, 0, 262183, 12, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 12, 0, 327687, 6, 0, 327688, 16, 0, 327689, 4, 0, 327690, 4, 0, 327691, 5, 0, 327692, 10, 0, 327693, 11, 0, 327694, 12, 0, 327695, 12, 0, 327696, 12, 0, 327707, 4, 0, 327708, 4, 0, 327709, 4, 0, 327710, 4, 0, 327711, 4, 0, 327712, 4, 0, 327713, 4, 0, 327714, 4, 0, 327715, 17, 0, 327716, 2, 0, 327717, 12, 0, 327718, 4, 0, 327719, 12, 0, 327720, 12, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 12, 0, 393224, 6, 0, 393225, 16, 0, 393226, 4, 0, 393227, 5, 0, 393228, 10, 0, 393229, 12, 0, 393231, 12, 0, 393243, 4, 0, 393244, 4, 0, 393245, 4, 0, 393246, 4, 0, 393247, 4, 0, 393248, 4, 0, 393249, 4, 0, 393250, 4, 0, 393251, 4, 0, 393252, 5, 0, 393253, 12, 0, 393254, 12, 0, 393255, 4, 0, 393256, 12, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 12, 0, 458761, 3, 0, 458762, 4, 0, 458763, 5, 0, 458764, 10, 0, 458765, 12, 0, 458766, 12, 0, 458767, 12, 0, 458779, 4, 0, 458780, 4, 0, 458781, 4, 0, 458782, 4, 0, 458783, 4, 0, 458784, 4, 0, 458785, 4, 0, 458786, 4, 0, 458787, 4, 0, 458788, 17, 0, 458789, 2, 0, 458790, 12, 0, 458791, 12, 0, 458792, 12, 0, 458793, 12, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 12, 0, 524297, 3, 0, 524298, 4, 0, 524299, 5, 0, 524300, 10, 0, 524301, 12, 0, 524302, 12, 0, 524303, 12, 0, 524315, 7, 0, 524316, 16, 0, 524317, 4, 0, 524318, 4, 0, 524319, 4, 0, 524320, 4, 0, 524321, 4, 0, 524322, 4, 0, 524323, 4, 0, 524324, 4, 0, 524325, 17, 0, 524326, 2, 0, 524327, 12, 0, 524328, 12, 0, 524329, 12, 0, 524330, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 12, 0, 589833, 3, 0, 589834, 4, 0, 589835, 5, 0, 589836, 10, 0, 589837, 12, 0, 589839, 12, 0, 589851, 12, 0, 589852, 6, 0, 589853, 16, 0, 589854, 4, 0, 589855, 4, 0, 589856, 4, 0, 589857, 4, 0, 589858, 4, 0, 589859, 4, 0, 589860, 4, 0, 589861, 4, 0, 589862, 17, 0, 589863, 2, 0, 589864, 12, 0, 589865, 12, 0, 589866, 12, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 12, 0, 655368, 12, 0, 655369, 3, 0, 655370, 4, 0, 655371, 5, 0, 655372, 10, 0, 655373, 12, 0, 655375, 12, 0, 655387, 12, 0, 655388, 12, 0, 655389, 6, 0, 655390, 16, 0, 655391, 4, 0, 655392, 4, 0, 655393, 4, 0, 655394, 4, 0, 655395, 4, 0, 655396, 4, 0, 655397, 4, 0, 655398, 4, 0, 655399, 17, 0, 655400, 2, 0, 655401, 12, 0, 655402, 12, 0, 655403, 4, 0, 655404, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 10, 0, 720903, 12, 0, 720904, 0, 0, 720905, 18, 0, 720906, 4, 0, 720907, 5, 0, 720908, 10, 0, 720909, 12, 0, 720911, 12, 0, 720923, 12, 0, 720924, 12, 0, 720925, 12, 0, 720926, 6, 0, 720927, 16, 0, 720928, 4, 0, 720929, 4, 0, 720930, 4, 0, 720931, 4, 0, 720932, 4, 0, 720933, 4, 0, 720934, 4, 0, 720935, 4, 0, 720936, 17, 0, 720937, 2, 0, 720938, 12, 0, 720939, 12, 0, 720940, 12, 0, 720941, 12, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 10, 0, 786439, 0, 0, 786440, 18, 0, 786441, 4, 0, 786442, 4, 0, 786443, 17, 0, 786444, 2, 0, 786445, 11, 0, 786446, 4, 0, 786459, 4, 0, 786460, 12, 0, 786461, 12, 0, 786462, 12, 0, 786463, 3, 0, 786464, 4, 0, 786465, 4, 0, 786466, 4, 0, 786467, 4, 0, 786468, 4, 0, 786469, 4, 0, 786470, 4, 0, 786471, 4, 0, 786472, 4, 0, 786473, 17, 0, 786474, 4, 0, 786475, 4, 0, 851971, 4, 0, 851972, 4, 0, 851973, 4, 0, 851974, 10, 0, 851975, 3, 0, 851976, 4, 0, 851977, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 5, 0, 851981, 11, 0, 851982, 4, 0, 851995, 4, 0, 851996, 4, 0, 851997, 12, 0, 851998, 12, 0, 851999, 6, 0, 852000, 16, 0, 852001, 4, 0, 852002, 4, 0, 852003, 4, 0, 852004, 4, 0, 852005, 4, 0, 852006, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 4, 0, 917510, 12, 0, 917511, 3, 0, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 5, 0, 917517, 11, 0, 917518, 12, 0, 917519, 4, 0, 917531, 4, 0, 917532, 4, 0, 917533, 12, 0, 917534, 12, 0, 917535, 12, 0, 917536, 3, 0, 917537, 4, 0, 917538, 4, 0, 917539, 4, 0, 983043, 4, 0, 983044, 4, 0, 983045, 12, 0, 983046, 0, 0, 983047, 18, 0, 983048, 4, 0, 983049, 4, 0, 983050, 4, 0, 983051, 4, 0, 983052, 17, 0, 983053, 2, 0, 983054, 12, 0, 983055, 12, 0, 983056, 4, 0, 983067, 4, 0, 983068, 4, 0, 983069, 4, 0, 983070, 12, 0, 983071, 12, 0, 1048580, 12, 0, 1048581, 0, 0, 1048582, 18, 0, 1048583, 4, 0, 1048584, 4, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 4, 0, 1048589, 17, 0, 1048590, 2, 0, 1048591, 12, 0, 1048592, 10, 0, 1048603, 4, 0, 1114116, 0, 0, 1114117, 18, 0, 1114118, 4, 0, 1114119, 4, 0, 1114120, 4, 0, 1114121, 4, 0, 1114122, 4, 0, 1114123, 4, 0, 1114124, 4, 0, 1114125, 4, 0, 1114126, 17, 0, 1114127, 1, 0, 1114128, 1, 0, 1179652, 18, 0, 1179653, 4, 0, 1179654, 4, 0, 1179655, 4, 0, 1179656, 4, 0, 1179657, 4, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 4, 0, 1179661, 4, 0, 1179662, 4, 0, 1179663, 4, 0, 1179664, 4, 0, 1245189, 4, 0, 1245190, 4, 0, 1245191, 4, 0, 1245192, 4, 0, 1245193, 4, 0, 1245194, 4, 0, 1245195, 4, 0, 1245196, 4, 0, 1245197, 4, 0, 1245198, 4, 0, 1245199, 4, 0, 1245200, 4, 0, 1310725, 4, 0, 1310726, 4, 0, 1310727, 4, 0, 1310728, 4, 0, 1310729, 4, 0, 1310730, 4, 0, 1310731, 4, 0, 1310732, 4, 0, 1376261, 4, 0, 1376262, 4, 0, 1376263, 4, 0, 1376264, 4, 0 )

[node name="Ground" type="TileMap" parent="TileMapBG"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( -393178, 0, 0, -393177, 1, 0, -393176, 1, 0, -327643, 0, 0, -327642, 16, 0, -327641, 14, 0, -327640, 14, 0, -262108, 0, 0, -262107, 16, 0, -262106, 14, 0, -262105, 14, 0, -262104, 14, 0, -196572, 9, 0, -196571, 14, 0, -196570, 14, 0, -196569, 14, 0, -196568, 14, 0, -131036, 9, 0, -131035, 14, 0, -131034, 14, 0, -131033, 14, 0, -131032, 14, 0, -131031, 14, 0, -65536, 14, 0, -65535, 14, 0, -65534, 1, 0, -65533, 3, 0, -65500, 9, 0, -65499, 14, 0, -65498, 14, 0, -65497, 14, 0, -65496, 14, 0, -65495, 14, 0, 0, 14, 0, 1, 14, 0, 2, 14, 0, 3, 4, 0, 36, 9, 0, 37, 14, 0, 38, 14, 0, 39, 14, 0, 40, 14, 0, 41, 14, 0, 65536, 14, 0, 65537, 14, 0, 65538, 14, 0, 65539, 15, 0, 65540, 3, 0, 65572, 9, 0, 65573, 14, 0, 65574, 14, 0, 65575, 14, 0, 65576, 14, 0, 65577, 14, 0, 131072, 14, 0, 131073, 14, 0, 131074, 14, 0, 131075, 14, 0, 131076, 4, 0, 131088, 0, 0, 131108, 8, 0, 131109, 22, 0, 131110, 14, 0, 131111, 14, 0, 131112, 14, 0, 131113, 14, 0, 131114, 14, 0, 196608, 14, 0, 196609, 14, 0, 196610, 14, 0, 196611, 14, 0, 196612, 15, 0, 196613, 3, 0, 196623, 0, 0, 196624, 16, 0, 196644, 13, 0, 196645, 21, 0, 196646, 14, 0, 196647, 14, 0, 196648, 14, 0, 196649, 14, 0, 196650, 14, 0, 262145, 14, 0, 262146, 14, 0, 262147, 14, 0, 262148, 14, 0, 262149, 15, 0, 262150, 3, 0, 262158, 0, 0, 262159, 16, 0, 262160, 14, 0, 262181, 21, 0, 262182, 22, 0, 262183, 14, 0, 262184, 14, 0, 262185, 14, 0, 262186, 14, 0, 327681, 14, 0, 327682, 14, 0, 327683, 14, 0, 327684, 14, 0, 327685, 14, 0, 327686, 4, 0, 327693, 0, 0, 327694, 16, 0, 327695, 14, 0, 327696, 14, 0, 327717, 13, 0, 327718, 21, 0, 327719, 22, 0, 327720, 14, 0, 327721, 14, 0, 327722, 14, 0, 393217, 14, 0, 393218, 14, 0, 393219, 14, 0, 393220, 14, 0, 393221, 14, 0, 393222, 15, 0, 393223, 3, 0, 393229, 9, 0, 393230, 14, 0, 393231, 14, 0, 393232, 14, 0, 393254, 13, 0, 393255, 21, 0, 393256, 14, 0, 393257, 14, 0, 393258, 14, 0, 393259, 14, 0, 458753, 14, 0, 458754, 14, 0, 458755, 14, 0, 458756, 14, 0, 458757, 14, 0, 458758, 14, 0, 458759, 15, 0, 458760, 3, 0, 458765, 9, 0, 458766, 14, 0, 458767, 14, 0, 458768, 14, 0, 458791, 21, 0, 458792, 6, 0, 458793, 6, 0, 458794, 22, 0, 458795, 14, 0, 524290, 14, 0, 524291, 14, 0, 524292, 14, 0, 524293, 14, 0, 524294, 14, 0, 524295, 24, 0, 524296, 5, 0, 524301, 9, 0, 524302, 14, 0, 524303, 14, 0, 524304, 14, 0, 524327, 13, 0, 524328, 12, 0, 524329, 12, 0, 524330, 21, 0, 524331, 14, 0, 589826, 14, 0, 589827, 14, 0, 589828, 14, 0, 589829, 14, 0, 589830, 14, 0, 589831, 23, 0, 589832, 10, 0, 589837, 9, 0, 589838, 14, 0, 589839, 14, 0, 589840, 14, 0, 589866, 21, 0, 589867, 14, 0, 589868, 14, 0, 655362, 14, 0, 655363, 14, 0, 655364, 14, 0, 655365, 14, 0, 655366, 14, 0, 655367, 5, 0, 655373, 9, 0, 655374, 14, 0, 655375, 14, 0, 655376, 14, 0, 655387, 44, 0, 655402, 21, 0, 655403, 6, 0, 655404, 6, 0, 720898, 14, 0, 720899, 14, 0, 720900, 14, 0, 720901, 14, 0, 720902, 23, 0, 720903, 10, 0, 720909, 8, 0, 720910, 22, 0, 720911, 14, 0, 720912, 14, 0, 720923, 19, 0, 720924, 44, 0, 720938, 13, 0, 720939, 11, 0, 720940, 11, 0, 786435, 14, 0, 786436, 14, 0, 786437, 14, 0, 786438, 4, 0, 786445, 13, 0, 786446, 21, 0, 786447, 14, 0, 786448, 14, 0, 786459, 14, 0, 786460, 18, 0, 851971, 14, 0, 851972, 14, 0, 851973, 24, 0, 851974, 5, 0, 851982, 21, 0, 851983, 22, 0, 851984, 14, 0, 851995, 14, 0, 851996, 19, 0, 851997, 44, 0, 917507, 14, 0, 917508, 14, 0, 917509, 23, 0, 917510, 10, 0, 917518, 13, 0, 917519, 21, 0, 917520, 14, 0, 917531, 14, 0, 917532, 14, 0, 917533, 19, 0, 917534, 44, 0, 983044, 6, 0, 983045, 5, 0, 983055, 21, 0, 983056, 6, 0, 983067, 14, 0, 983068, 14, 0, 983069, 14, 0, 983070, 18, 0, 1048580, 12, 0, 1048581, 10, 0, 1048591, 13, 0, 1048592, 12, 0 )

[node name="Details" type="TileMap" parent="TileMapBG"]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( -327655, 3, 0, -262117, 0, 0, -131044, 1, 0, -65508, 7, 0, 65542, 4, 0, 65543, 2, 0, 131078, 3, 0, 196610, 1, 0, 262155, 1, 0, 262166, 2, 0, 262167, 3, 0, 327683, 5, 0, 393219, 1, 0, 393227, 5, 0, 458778, 3, 0, 458779, 2, 0, 458782, 0, 0, 524313, 3, 0, 589846, 0, 0, 655363, 5, 0, 720906, 0, 0, 851974, 3, 0, 851975, 2, 0, 851976, 3, 0, 917510, 2, 0, 983047, 3, 0 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 5 )

[node name="BG2" type="Sprite" parent="."]
visible = false
position = Vector2( 1005.33, 563.743 )
texture = ExtResource( 5 )

[node name="StartText" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Press ANY KEY to START fu**ing awesome game!"
align = 1
autowrap = true

[node name="InfoText" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -78.0
custom_fonts/font = SubResource( 1 )
text = "Tu chyba ma byc informacja o klawiszach"
align = 1
autowrap = true

[node name="Title" type="Sprite" parent="."]
position = Vector2( 1024.66, 206.491 )
texture = ExtResource( 7 )

[node name="Plane" type="Sprite" parent="."]
position = Vector2( 319.136, 724.207 )
rotation = 0.261799
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 8 )

[node name="PlaneShadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.329412 )
position = Vector2( 321.084, 737.843 )
rotation = 0.261799
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )

[node name="Enemies" type="Node2D" parent="."]
editor/display_folded = true

[node name="Enemy" type="Sprite" parent="Enemies"]
position = Vector2( 1444.97, 742.012 )
rotation = 0.261799
scale = Vector2( -1, 1 )
texture = ExtResource( 9 )

[node name="Enemy2" type="Sprite" parent="Enemies"]
position = Vector2( 1813.19, 716.906 )
rotation = 0.261799
texture = ExtResource( 10 )

[node name="Enemy3" type="Sprite" parent="Enemies"]
position = Vector2( 1771.34, 125.528 )
rotation = 0.261799
scale = Vector2( -1, 1 )
texture = ExtResource( 11 )

[node name="Enemy4" type="Sprite" parent="Enemies"]
position = Vector2( 1336.18, 443.534 )
rotation = 0.261799
texture = ExtResource( 12 )

[node name="ButtonsPanel" type="Node" parent="."]
editor/display_folded = true

[node name="ButtonStartGame" type="TextureButton" parent="ButtonsPanel"]
anchor_bottom = 0.71
margin_left = 769.677
margin_top = 403.838
margin_right = 1195.68
margin_bottom = -266.962
rect_pivot_offset = Vector2( 213, 48 )
texture_normal = ExtResource( 13 )
expand = true
script = ExtResource( 14 )
on_enter_size = Vector2( 1.1, 1.1 )

[node name="Label" type="Label" parent="ButtonsPanel/ButtonStartGame"]
modulate = Color( 0.341176, 0.290196, 0.156863, 1 )
margin_left = 44.1638
margin_top = 17.7151
margin_right = 381.164
margin_bottom = 72.7151
custom_fonts/font = SubResource( 2 )
text = "START GAME"
align = 1

[node name="ButtonHighscore" type="TextureButton" parent="ButtonsPanel"]
anchor_bottom = 0.71
margin_left = 698.099
margin_top = 667.964
margin_right = 1124.1
margin_bottom = -2.83594
rect_pivot_offset = Vector2( 213, 48 )
texture_normal = ExtResource( 13 )
expand = true
script = ExtResource( 14 )
on_enter_size = Vector2( 1.1, 1.1 )

[node name="Label" type="Label" parent="ButtonsPanel/ButtonHighscore"]
modulate = Color( 0.341176, 0.290196, 0.156863, 1 )
margin_left = 44.1638
margin_top = 17.7151
margin_right = 381.164
margin_bottom = 72.7151
custom_fonts/font = SubResource( 2 )
text = "HIGHSCORE"
align = 1

[node name="ButtonSettings" type="TextureButton" parent="ButtonsPanel"]
anchor_bottom = 0.71
margin_left = 735.33
margin_top = 533.4
margin_right = 1161.34
margin_bottom = -137.4
rect_pivot_offset = Vector2( 213, 48 )
texture_normal = ExtResource( 13 )
expand = true
script = ExtResource( 14 )
on_enter_size = Vector2( 1.1, 1.1 )

[node name="Label" type="Label" parent="ButtonsPanel/ButtonSettings"]
modulate = Color( 0.341176, 0.290196, 0.156863, 1 )
margin_left = 44.1638
margin_top = 17.7151
margin_right = 381.164
margin_bottom = 72.7151
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"
align = 1

[node name="ButtonCredits" type="TextureButton" parent="ButtonsPanel"]
anchor_bottom = 0.71
margin_left = 661.405
margin_top = 799.631
margin_right = 1087.41
margin_bottom = 128.831
rect_pivot_offset = Vector2( 213, 48 )
texture_normal = ExtResource( 13 )
expand = true
script = ExtResource( 14 )
on_enter_size = Vector2( 1.1, 1.1 )

[node name="Label" type="Label" parent="ButtonsPanel/ButtonCredits"]
modulate = Color( 0.341176, 0.290196, 0.156863, 1 )
margin_left = 44.1638
margin_top = 17.7151
margin_right = 381.164
margin_bottom = 72.7151
custom_fonts/font = SubResource( 2 )
text = "CREDITS"
align = 1

[node name="ButtonQuit" type="TextureButton" parent="ButtonsPanel"]
anchor_bottom = 0.71
margin_left = 626.869
margin_top = 931.298
margin_right = 1052.87
margin_bottom = 260.498
rect_pivot_offset = Vector2( 213, 48 )
texture_normal = ExtResource( 13 )
expand = true
script = ExtResource( 14 )
on_enter_size = Vector2( 1.1, 1.1 )

[node name="Label" type="Label" parent="ButtonsPanel/ButtonQuit"]
modulate = Color( 0.341176, 0.290196, 0.156863, 1 )
margin_left = 44.1638
margin_top = 17.7151
margin_right = 381.164
margin_bottom = 72.7151
custom_fonts/font = SubResource( 2 )
text = "QUIT"
align = 1

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -7.0
autoplay = true
bus = "Music"
